# bitszcoin

./: Makefile.am  configure.ac
share/: genbuild.sh
src/: Makefile.am  Makefile.qt.include  amount.h  base58.h  bignum.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.h  hash.cpp  hash.h  init.cpp  kernel.cpp  kernel.h  kernelrecord.cpp  kernelrecord.h  key.cpp  miner.cpp  net.cpp  net.h  net_processing.cpp  pow.cpp  pow.h  protocol.h  serialize.h  txdb.cpp  validation.cpp  validation.h  version.h  (+1 more)
src/consensus/: params.h  tx_check.cpp  tx_verify.cpp  tx_verify.h
src/interfaces/: wallet.h
src/primitives/: block.h  transaction.h
src/qt/: README.md  addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  mintingfilterproxy.cpp  mintingfilterproxy.h  mintingtablemodel.cpp  mintingtablemodel.h  mintingview.cpp  mintingview.h  modaloverlay.cpp  multisigaddressentry.h  multisigdialog.cpp  multisigdialog.h  multisiginputentry.cpp  multisiginputentry.h  optionsmodel.cpp  overviewpage.cpp  paymentserver.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendcoinsentry.cpp  splashscreen.cpp  transactionrecord.cpp  utilitydialog.cpp  walletframe.cpp  walletframe.h  (+4 more)
(+73 files in other folders)
